# ladder

./: #B-W-LectureNotes.org#  README.md
02_Competent/EfficientPersistentDataStructures/: LYAH_Zippers.hs
02_Competent/EmbeddedDSLsUsingCombinators/: Intro.hs
02_Competent/ExistentialTypes/: ExistentialTypesInScala.scala  FromWikiBook.hs  WhatIsRunST.hs
02_Competent/GADTs/: GADTs1.hs  GADTs2.hs
02_Competent/HigherKinded/: #HigherKindedLearn.hs#  HigherKindedLearn.hi  HigherKindedLearn.hs  HigherKindedTypes1.hs
02_Competent/HigherOrderAbstractions/: B-W-LectureNotes.html  B-W-LectureNotes.org
02_Competent/Optics/: ReviewTraversable.hs  ScenicRoute.hs  TasteLenses  TasteLenses.dyn_hi  TasteLenses.dyn_o  TasteLenses.hi  TasteLenses.hs  WikiLenses.hs
02_Competent/RankNTypes/: Explain.hs  Wiki.hs
03_Proficient/AdvancedFunctors/: Exponential.hs
03_Proficient/AdvancedMonads/: Continuation.hs  Coroutine.hs
03_Proficient/AdvancedOptics/more-lens/: README.md  more-lens.cabal
03_Proficient/AdvancedOptics/more-lens/src/: Main.hs  Playground.hs  ReviewTraversable.hs  WikiLenses.hs
03_Proficient/Arrows/: ReviewMonadPlus.hs  StaticDynamicParsers.hs  UnderstandingArrows.hs  UnderstandingArrows2.hs  WikibookTutorial.hs
03_Proficient/Codata/: DataAndCodata.hs
03_Proficient/CorecursionSchemes/: Unfolding.hs
03_Proficient/ExtensibleEffects/: Extensible.hs
03_Proficient/FreeMonads/: WhyFreeMonadsMatter1.hs  WhyFreeMonadsMatter2.hs
03_Proficient/FunctionalDependencies/: FromWiki.hs
03_Proficient/MonadTransformers/: FromWikibook1.hs  FromWikibook2.hs  Review.hs  (+2 more)
(+24 files in other folders)
